
  - Removed private functions
      beancount.query.query_env.convert_amount(),
      beancount.query.query_env.convert_position(), and
      beancount.query.query_env.value_position(),
      beancount.query.query_env.value_inventory().
    These used to issue warnings if the conversion could not be carried out; now
    they simply keeps the units of the position instead.


2017-01-14

  - Fixed bug with generation of example that would produce an incorrect initial
    balance for banking accounts. The example test should have been broken. (No
    idea why this wasn't deteted earlier, probably by chance.)


2017-01-08

  - Completed "Intro to Double-Entry Accounting" doc.
    http://furius.ca/beancount/doc/intro

  - Added a --reverse/--descending flag to bean-extract to print the extracted
    entries in reverse order.


2016-12-17

  - Added a --title option to upload-to-sheets in order to conveniently set the
    document's title.

  - Removed obsolete variable LEGACY_DEFAULT_TOLERANCES which had been
    forgotten.


2016-12-15

  - Made beancount.ingest.extract print out a stack trace when an unexpected
    exception is raised.

  - Fixed bugs in beancount.query.query_render where expand wasn't being passed
    through the rendering functions.

  - Deprecated bin/upload-csv-to-google-sheet; I moved the last version to
    beancount/experiments/gapis in case you've come to be dependent on its
    particularities. It doesn't need any of the Beancount libraries, so you can
    just copy it somewhere and keep using it if so desired.

  - Replaced "bin/upload-csv-to-google-sheet" to "bin/upload-to-sheets". The
    newer script is a complete rewrite which does not require the antiquated
    gdata library, and which uses the latest and greatest version of the Google
    Sheets API (v4). You don't need gdata anymore. Moreover, this one runs in
    Python3 instead of depending on Python2.

    The script has slightly improved invocation semantics, and I'll using it