@@ -215,11 +215,16 @@ check-copyright:
 # To list all messages, call: "pylint --list-msgs"
 LINT_SRCS =					\
   $(SRC)/beancount				\
+  bin/*						\
   examples/ingest/office/importers		\
   tools
 
+# Note: Keeping to 3.5 because 3.6 pylint raises an exception (as of 2017-01-15).
+#PYLINT = pylint
+PYLINT = python3.5 $(shell which pylint)
+
 pylint lint:
-	pylint --rcfile=$(PWD)/etc/pylintrc $(LINT_SRCS)
+	$(PYLINT) --rcfile=$(PWD)/etc/pylintrc $(LINT_SRCS)
 
 pyflakes:
 	pyflakes $(LINT_SRCS)
