@@ -22,6 +22,10 @@ from beancount.core.amount import CURRENCY_RE
 from beancount.core.display_context import DEFAULT_FORMATTER
 
 
+# Disable lint errors for namedtuples declared here.
+# pylint: disable=invalid-name
+
+
 # A variant of Amount that also includes a date and a label.
 #
 # Attributes:
@@ -260,7 +264,7 @@ class Position(_Position):
           units: An instance of Amount.
         """
         assert isinstance(units, Amount)
-        self.units = units
+        self.units = units  # pylint: disable=assigning-non-slot
 
     def currency_pair(self):
         """Return the currency pair associated with this position.
