@@ -9,7 +9,6 @@ from os import path
 from beancount.core import data
 from beancount.core import position
 from beancount.core import convert
-from beancount.core import interpolate
 from beancount.core import realization
 from beancount.core import flags
 
